# data_quality

./: .gitignore  GUIA_CODIGOS_ERRO.md  README.md  erros.md  main.py  pyproject.toml  settings.toml  test_api.py
app/: aplicacao.py  app.py  contrato.py  exemplo_uso_codigos.py  validar_modeloY.py
app/core/: codigos_erro.py  db.py  dw_model.py  import_service.py  models_validacao.py  schemas.py  storage_service.py  util.py  validator_service.py
data/: Modelo Y - Oficial_CALI_20250820.xlsx  Template_ModeloF.xlsx  local.db  normalized_20250910_165336.xlsx  ~$Template_ModeloF.xlsx
sql/: schema_backend.sql  schema_public.sql
tests/: test_contrato.py
