[project]
name = "data-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "janitor>=0.1.1",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandera[pandas]>=0.25.0",
    "pydantic>=2.11.7",
    "pyjanitor>=0.31.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "streamlit>=1.48.0",
    "taskipy>=1.14.1",
    "unidecode>=1.4.0",
]

[tool.taskipy.tasks]
init = "streamlit run app\aplicacao.py"
