[project]
name = "data-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "janitor>=0.1.1",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandera[pandas]>=0.25.0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pyjanitor>=0.31.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.0",
    "taskipy>=1.14.1",
    "unidecode>=1.4.0",
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.10",
]
